Added the full landing page text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <p>
+      <a class="download-cta" href="#">Download Excursion (Coming soon!)</a>
+    </p>
+    <video autoplay muted loop>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="camping image">
+    </p>
+    <p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="cellphone icon">
+    </p>
+    <h2>Comming Soon for iPhone and Android</p>
     <a class="download-cta" href="#">Download Excursion (Coming soon!)</a>
+
   </body>
 </html>
