Added footer to the landing page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </p>
     <h2>Comming Soon for iPhone and Android</p>
     <a class="download-cta" href="#">Download Excursion (Coming soon!)</a>
-
+    <div class="footer">
+      <p>© Excursion</p>
+    </div>
   </body>
 </html>
